# Splatterlinge

./: .gitignore  .gitmodules  .kateproject  .sparkleshare  .travis.yml  CMakeLists.txt  CMakeLists_Qt5.txt  CodingStyle.xml  Doxyfile  LICENSE  README.md  Ununoctium.cbp
CMakeModules/: FindOVR.cmake  FindUDev.cmake  FindVorbisFile.cmake
data/: basic.fsh  basic.vsh
data/landscape/earth/: landscape.ini
data/landscape/lost_island/: landscape.ini
data/landscape/test/: landscape.ini
data/material/CobbleStone/: depth.tga  diffuse.tga  material.ini  normal.tga
data/material/DirtyConcrete/: material.ini
data/material/Grass/: material.ini
data/material/KirksEntry/: material.ini
data/material/MetalSheet/: material.ini
data/material/PowerUp_Armor/: material.ini
data/material/PowerUp_Health/: material.ini
data/material/Sand/: material.ini
data/material/Splatter/: material.ini
data/material/SplatterBig/: material.ini
data/material/Splatterbug_Splatterbug/: Splatterbug.mtl  Splatterbug_Splatterbug.mtl  material.ini
data/material/Splatterling/: material.ini
data/material/bushBlow_bushtwig/: material.ini
data/material/flower_Paper_Gray/: material.ini
data/material/flower_mat_straw01/: material.ini
data/material/lightsaber_Material__0/: material.ini
data/material/table01_tt/: material.ini  table01.mtl
data/material/tree_Material__25/: material.ini
data/material/tree_Material__26/: material.ini
data/material/tree_tree/: material.ini
data/model/Splatterbug/: Splatterbug_Splatterbug.mtl  bug.mtl  material.ini
data/model/fliegenklatsche/: fliegenklatsche.max  fliegenklatsche.mtl
data/model/flower/: flower.mtl
data/model/knife/: knife.max  knife.mtl  knife.mtl.bck
data/model/lightsaber/: lightsaber.max  lightsaber.mtl
data/object/tree/: tree.mtl
data/shader/: cloud.frag  cube.fsh  cube.vert  diff.blobbing.frag  diff.default.frag  diffNorm.blobbing.frag  diffNorm.default.frag  diffNormDepth.blobbing.frag  diffNormDepth.default.frag  diffSpec.blobbing.frag  diffSpec.default.frag  diffSpecNorm.blobbing.frag  diffSpecNorm.default.frag  diffSpecNormDepth.blobbing.frag  diffSpecNormDepth.default.frag  direct.default.frag  simple.low.frag  simpleBlob.low.frag  simpleBlob.low.vert  skydome.fsh  skydome.vert  skydome.vsh  versatile.fsh  versatile.high.frag  versatile.high.fsh  versatile.high.readme  versatile.high.vert  versatile.high.vsh  versatile.low.frag  versatile.low.vert  versatile.medium.frag  versatile.medium.fsh  versatile.medium.readme  versatile.medium.vsh  versatile.readme  versatile.vsh  versatileBlob.fsh  versatileBlob.high.frag  versatileBlob.low.frag  versatileBlob.low.vert  (+7 more)
data/sky/: earth.tga
data/sky/earth/: dome.tga  sky.ini
data/style/: global.qss
data/world/: earth.ini
src/: DebugOptionWindow.cpp  DebugOptionWindow.hpp  DebugWindow.cpp  DebugWindow.hpp  Eye.cpp  Eye.hpp  GLScene.cpp  GLScene.h  GLScene.hpp  GLView.cpp  GLView.h  GLView.hpp  GLWidget.cpp  GLWidget.h  GLWidget.hpp  GfxOptionWindow.cpp  GfxOptionWindow.hpp  HelpWindow.cpp  HelpWindow.hpp  KeyListener.hpp  Landscape.cpp  Landscape.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  Material.cpp  Material.hpp  MouseListener.hpp  Object3D.cpp  Object3D.hpp  OptionWindow.cpp  OptionWindow.hpp  Resource.cpp  Resource.hpp  Shader.cpp  Shader.hpp  Sky.cpp  Sky.hpp  StartMenuWindow.cpp  StartMenuWindow.hpp  (+13 more)
src/data/material/: blueWing.xcf
src/data/sound/: splatter.txt
src/effect/: SplatterSystem.cpp  SplatterSystem.hpp
src/geometry/: ParticleSystem.cpp  ParticleSystem.hpp  SplatterSystem.cpp  SplatterSystem.hpp  Terrain.cpp  Terrain.hpp  Vertex.hpp  teapot.c  teapot.h
src/resource/: AResource.cpp  AResource.hpp  AudioSample.cpp  AudioSample.hpp  Material.cpp  Material.hpp  Shader.cpp  Shader.hpp  StaticModel.cpp  StaticModel.hpp  WavefrontModel.cpp  WavefrontModel.hpp
src/resource/audioLoader/: audioLoader.c  audioLoader.h  oggVorbis.c  oggVorbis.h  riffWave.c  riffWave.h  wav.c  wav.h
src/resources/: AResource.hpp  Material.hpp  Shader.cpp  Shader.hpp
src/scene/: AKeyListener.hpp  AMouseListener.hpp  KeyListener.hpp  MouseListener.hpp  Scene.cpp  Scene.hpp  Sky.cpp  Sky.hpp  Terrain.hpp  TextureRenderer.cpp  TextureRenderer.hpp  teapot.h
src/scene/object/: ALightSource.cpp  ALightSource.hpp  AObject.cpp  AObject.hpp  AWorldObject.cpp  AWorldObject.hpp  Eye.cpp  Eye.hpp  Landscape.cpp  Landscape.hpp  Player.cpp  Player.hpp  Sky.cpp  Sky.hpp  Teapot.cpp  Teapot.hpp  Torch.cpp  Torch.hpp  WavefrontObject.cpp  WavefrontObject.hpp  World.cpp  World.hpp
src/scene/object/creature/: ACreature.cpp  ACreature.hpp  Dummy.cpp  Dummy.hpp  Player.cpp  Player.hpp  Splatterbug.cpp  Splatterbug.hpp  Splatterling.cpp  Splatterling.hpp
src/scene/object/environment/: AVegetation.cpp  AVegetation.hpp  Flower.cpp  Flower.hpp  Forest.cpp  Forest.hpp  Grass.cpp  Grass.hpp  PowerUp.cpp  PowerUp.hpp
src/scene/object/geometry/: ParticleSystem.cpp  ParticleSystem.hpp  Sky.cpp  Sky.hpp  Terrain.cpp  Terrain.hpp  teapot.c  teapot.h
src/scene/object/weapon/: AWeapon.cpp  AWeapon.hpp  Fliegenklatsche.cpp  Fliegenklatsche.hpp  Knife.cpp  Knife.hpp  Laser.cpp  Laser.hpp  Lightsaber.cpp  Lightsaber.hpp  Minigun.cpp  Minigun.hpp
src/scene/objects/: AObject.cpp  Eye.cpp  Landscape.cpp  Landscape.hpp  Teapot.cpp  Teapot.hpp  World.cpp  World.hpp
src/textures/: DirtyConcrete.specular.xcf
src/utility/: Bilboard.hpp  Capsule.cpp  Capsule.hpp  FrustumTest.cpp  FrustumTest.hpp  Interpolation.hpp  Intersection.cpp  Intersection.hpp  OcclusionTest.cpp  OcclusionTest.hpp  Quaternion.cpp  Quaternion.hpp  RandomNumber.cpp  RandomNumber.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Vector.cpp  Vector.hpp  Vertex.cpp  Vertex.hpp  WavefrontObject.cpp  WavefrontObject.hpp  alWrapper.cpp  alWrappers.hpp  glWrappers.cpp  glWrappers.hpp  interpolate.hpp  occlusion.cpp  occlusion.hpp  qHashKeys.hpp  qtalwrappers.hpp  qtglwrappers.hpp  quaternion.cpp  quaternion.hpp  random.hpp  vector.cpp  vector.hpp
